colors.scss :: color palette added

--- a/src/assets/scss/variables/_colors.scss
+++ b/src/assets/scss/variables/_colors.scss
@@ -1,2 +1,18 @@
 $main-background:#FFFFFF;
+$background-gray-100:#F9F9F9;
+$background-gray-200:#F5F5F5;
+$background-gray-300:#F2F2F2;
+$background-gray-400:#E1E3E3;
+$red-100:#FF503F;
+$red-200:#F05555;
+$red-300:#F30202;
+$blue:#2D6FF7;
+$green:#1FAE5B;
 $primary-color:#000000;
+$text-gray-100:#7C7F85;
+$text-gray-200:#707885;
+$text-gray-300:#677075;
+$text-gray-400:#656C77;
+$text-gray-500:#464E5B;
+$text-gray-600:#464E5B;
+$text-gray-700:#272930;
