components :: answer container created

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,3 +2,5 @@
 @import './variables/colors';
 @import './variables/fontFamily';
 @import './helpers/mixins/flex';
+@import './helpers/mixins/font';
+@import './helpers/classes/direction';
