--- a/src/assets/scss/variables/_colors.scss
+++ b/src/assets/scss/variables/_colors.scss
@@ -14,5 +14,5 @@ $text-gray-200:#707885;
 $text-gray-300:#677075;
 $text-gray-400:#656C77;
 $text-gray-500:#464E5B;
-$text-gray-600:#464E5B;
+$text-gray-600:#26333B;
 $text-gray-700:#272930;
