--- a/src/assets/scss/variables/_fontFamily.scss
+++ b/src/assets/scss/variables/_fontFamily.scss
@@ -1,3 +1,3 @@
 $timesNewRoman: "Times New Roman", Times, serif;
-$arial: 'open sans', Arial, sans-serif;
-$roboto: 'Anton', sans-serif;
+$arial: "open sans", Arial, sans-serif;
+$roboto: roboto, Arial, sans-serif;
